<!--?xml version="1.0"?-->
<package> <!-- format="2"-->
  <name>blindbot_gazebo</name>
  <version>1.2.0</version>
  <description>
    This package is a modification of turtlebot_gazebo package made by Alejandro Perez-Yus (from Universidad de Zaragoza)
    Gazebo simulation package for the TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Original author: Pyo</author>
  <author email="thlim@robotis.com">Original author: Darby Lim</author>
  <author email="kkjong@robotis.com">Original author: Gilbert</author>
  <maintainer email="pyo@robotis.com">Original maintainer: Pyo</maintainer>
  <maintainer email="thlim@robotis.com">Original maintainer: Darby Lim</maintainer>
  <author email="alperez@unizar.es">A. Perez-Yus</author>
  <maintainer email="alperez@unizar.es">A. Perez-Yus</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_gazebo</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>kobuki_msgs</build_depend> -->
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <!-- <run_depend>kobuki_msgs</run_depend> -->
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>
	<gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
